--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Token Project</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blockchain Token Project</title>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            color: #fff;
-        }
-
-        .header {
-            background-color: #800000;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .content {
-            background-color: #000033;
-            padding: 20px;
-        }
-
-        .content h2, .content p {
-            margin-bottom: 20px;
-        }
-
-        .footer {
-            background-color: #800000;
-            text-align: center;
-            padding: 10px;
-        }
-
-        @media screen and (max-width: 600px) {
-            .content, .header, .footer {
-                padding: 10px;
-            }
-        }
+        /* ... your CSS styles here ... */
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>My Token Project</h1>
+        <h1>Blockchain Token Project</h1>
     </div>
 
     <div class="content">
-        <h2>About the Project</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed lorem ut elit aliquet fermentum.</p>
+        <!-- ... your content here ... -->
 
-        <h2>Our Vision</h2>
-        <p>Nulla bibendum, sem id ullamcorper tempus, mauris lorem dictum diam, sed lacinia diam ante et nulla.</p>
-
-        <h2>How to Participate</h2>
-        <p>Curabitur tristique, nisl sed mollis hendrerit, risus est egestas nulla, id egestas est orci non enim.</p>
+        <h2>Claim your token</h2>
+        <button id="claimButton">Claim Token</button>
     </div>
 
     <div class="footer">
-        <p>© 2023 My Token Project</p>
+        <p>&copy; 2023 Blockchain Token Project</p>
     </div>
+
+    <script>
+        window.addEventListener('load', function () {
+            if (window.ethereum) {
+                window.web3 = new Web3(ethereum);
+                try {
+                    ethereum.enable();
+                } catch (error) {
+                    console.log("User denied account access.")
+                }
+            } else if (window.web3) {
+                window.web3 = new Web3(web3.currentProvider);
+            } else {
+                console.log('Non-Ethereum browser detected. Consider installing MetaMask!');
+            }
+
+            var contractAddress = 'CONTRACT_ADDRESS';
+            var ABI = ABI_DEFINITION;
+            var contract = new web3.eth.Contract(ABI, contractAddress);
+
+            document.getElementById('claimButton').addEventListener('click', function() {
+                web3.eth.getAccounts().then(function(accounts) {
+                    contract.methods.claimToken().send({from: accounts[0]})
+                        .on('transactionHash', function(hash){
+                            console.log('Transaction Hash:', hash);
+                        })
+                        .on('confirmation', function(confirmationNumber, receipt){
+                            console.log('Confirmation Number:', confirmationNumber);
+                            console.log('Receipt:', receipt);
+                        })
+                        .on('error', console.error);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
