--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
             height: 100vh;
             background-color: #000033;
         }
+        /* ... Your existing CSS ... */
+
+        #claimButton {
+    background: none;
+    border: none;
+}
+
+        .coin {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    background-image: url('path/to/your/coin/image.png');
+    background-size: cover;
+    animation: coinFall 3s linear infinite;
+}
+
+        @keyframes coinFall {
+    0% {
+        top: -30px;
+        left: calc(100vw * var(--random-left));
+        animation-timing-function: cubic-bezier(var(--random-bezier), var(--random-bezier), var(--random-bezier), var(--random-bezier));
+    }
+    100% {
+        top: calc(100vh + 30px);
+    }
+}
 
         .header, .footer {
             background-color: #800000;
@@ -55,16 +81,41 @@
     </div>
 
     <div class="content">
-        <!-- ... your content here ... -->
-
-        <h2>Claim your token</h2>
-        <button id="claimButton">Claim Token</button>
-    </div>
+    <h2>Claim your token</h2>
+    <button id="claimButton">
+        <img src="path/to/your/coin/image.png" alt="Claim Token"/>
+    </button>
+</div>
 
     <div class="footer">
         <p>&copy; 2023 Blockchain Token Project</p>
     </div>
 
-    <!-- ... your JavaScript here ... -->
+    // ... Your existing JavaScript ...
+
+document.getElementById('claimButton').addEventListener('click', function() {
+    // ... Your existing claimToken function ...
+
+    // After successfully claiming the token, create the coin rain effect
+    createCoinRain();
+});
+
+function createCoinRain() {
+    // Create 100 coins
+    for (let i = 0; i < 100; i++) {
+        const coin = document.createElement('div');
+        coin.className = 'coin';
+        document.body.appendChild(coin);
+    }
+
+    // Remove coins after the animation ends
+    setTimeout(function() {
+        const coins = document.querySelectorAll('.coin');
+        coins.forEach(function(coin) {
+            coin.remove();
+        });
+    }, 3000);  // Adjust based on your animation duration
+}
+
 </body>
 </html>
