--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         position: fixed;
         width: 30px;
         height: 30px;
-        background-image: url('images/image.png');
+        background-image: url('./docs/assets/images/image.png');
         background-size: cover;
         animation: coinFall 3s linear infinite;
     }
