--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <h2>Claim your token</h2>
         <button id="claimButton">
-            <img src="./docs/assets/images/image.png" alt="Claim Token"/>
+            <img src="./image.png" alt="Claim Token"/>
         </button>
     </div>
 
