--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
     #claimButton {
         background: none;
         border: none;
+        transition: transform 0.3s ease;
     }
 
+    #claimButton:hover {
+        transform: scale(1.1);
+    }
     .coin {
         position: fixed;
         width: 30px;
