--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockchain Token Project</title>
+    <title>The Best Coin in The World</title>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
 <style>
-    * {
-        box-sizing: border-box;
-        padding: 0;
+    html, body {
         margin: 0;
-    }
-
-    body {
+        padding: 0;
+        width: 100%;
+        height: 100%;
         font-family: Arial, sans-serif;
         color: #ffffff; /* White text color */
+        background-color: #1A1A1A; /* Dark grey background */
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
-        background-color: #1A1A1A; /* Dark grey background */
     }
 
     .navbar {
@@ -40,25 +37,18 @@
         color: #ffffff; /* White text in header and footer */
         text-align: center;
         padding: 20px;
-        width: 80%;
+        width: 100%; /* Full width */
     }
 
     .content {
         background-color: #1A1A1A; /* Dark grey background for content */
         padding: 20px;
-        width: 80%;
+        width: 100%; /* Full width */
         text-align: center;
     }
 
     .content h2, .content p {
         margin-bottom: 20px;
-    }
-
-    @media screen and (max-width: 600px) {
-        .content, .header, .footer {
-            padding: 10px;
-            width: 90%;
-        }
     }
 
     #claimButton {
@@ -90,7 +80,14 @@
             top: calc(100vh + 30px);
         }
     }
+
+    @media screen and (max-width: 600px) {
+        .content, .header, .footer {
+            padding: 10px;
+        }
+    }
 </style>
+
 
 
 </head>
