--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="image">
-            <img src="./image.jpg" alt="Image related to the story">
+            <img src="./3szsDrzWBwDUCp5leeFy--1--xil8m.jpg" alt="Image related to the story">
         </div>
     </div>
         <h2>Claim your token</h2>
