--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     .story img {
         max-width: 100%; /* Image doesn't overflow its container */
         height: auto; /* Maintain aspect ratio */
+        border-radius: 20px; /* Rounded corners */
     }
 
     @media screen and (max-width: 600px) {
