--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>The Best Coin in The World</title>
     <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
 <style>
+     /* Set box-sizing to border-box for all elements */
+    *, *::before, *::after {
+        box-sizing: border-box;
+    }
+
     html, body {
         margin: 0;
         padding: 0;
