--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
     .navbar.hide {
         top: -50px;
     }
+    .header {
+        background-color: #0D0D0D; /* Darker grey header */
+        color: #E0E0E0; /* Lighter text in header */
+        text-align: center;
+        padding: 20px;
+        width: 100%; /* Full width */
+        font-size: 1.2em; /* Slightly larger font */
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
+    }
 
-    .header, .footer {
+    .footer {
         background-color: #1A1A1A; /* Dark grey header and footer */
         color: #ffffff; /* White text in header and footer */
         text-align: center;
@@ -122,7 +131,7 @@
 <body>
     <div class="navbar">
     <div class="header">
-        <h1>Blockchain Token Project</h1>
+        <h1>The Best Coin in The World</h1>
     </div>
 </div>
 
