--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     }
 
     .content {
+        margin-top: 40px; /* Add a top margin */
         background-color: #1A1A1A; /* Dark grey background for content */
         padding: 20px;
         width: 100%; /* Full width */
