--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
     }
 
     .content {
-        margin-top: 40px; /* Add a top margin */
+        margin-top: 100px; /* Add a top margin */
         background-color: #1A1A1A; /* Dark grey background for content */
         padding: 20px;
-        width: 100%; /* Full width */
+        width: 90%; /* Full width */
+        max-width: 1200px; /* Maximum width */
         text-align: center;
+        margin-left: auto; /* Center the content */
+        margin-right: auto; /* Center the content */
     }
 
     .content h2, .content p {
