--- a/index.html
+++ b/index.html
@@ -58,17 +58,21 @@
         margin-top: 100px; /* Add a top margin */
         background-color: #1A1A1A; /* Dark grey background for content */
         padding: 20px;
-        width: 90%; /* Full width */
+        width: 100%; /* Full width */
         max-width: 1200px; /* Maximum width */
-        text-align: center;
         margin-left: auto; /* Center the content */
         margin-right: auto; /* Center the content */
     }
 
-    .content h2, .content p {
-        margin-bottom: 20px;
+    .content p {
+        font-size: 1.1em; /* Increased font size */
+        line-height: 1.6; /* Better readability */
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
+        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* More professional font */
+        text-align: justify; /* Justified text */
     }
 
+    
     #claimButton {
         background: none;
         border: none;
