--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     .story {
         display: flex;
         justify-content: space-between;
-        align-items: start;
+        align-items: center;
         gap: 20px; /* Space between the text and image */
     }
 
