--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     .navbar.hide {
         top: -50px;
     }
+    #header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+    #logo {
+    height: 50px;  /* Adjust as needed */
+    width: 50px;   /* Adjust as needed */
+    margin-right: 10px;  /* Creates some space between the logo and the title */
+    }
     .header {
         background-color: #0D0D0D; /* Darker grey header */
         color: #E0E0E0; /* Lighter text in header */
@@ -136,9 +147,11 @@
 
 
 </head>
+  
 <body>
     <div class="navbar">
     <div class="header">
+        <img src="./tribut.png" alt="Logo" id="logo">
         <h1>The Best Coin in The World</h1>
     </div>
 </div>
