--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <body>
     <div class="navbar">
     <div class="header">
-        <img src="./tribut.png" alt="Logo" id="logo">
+        <img src="./tribute.png" alt="Logo" id="logo">
         <h1>The Best Coin in The World</h1>
     </div>
 </div>
