--- a/index.html
+++ b/index.html
@@ -36,25 +36,24 @@
     .navbar.hide {
         top: -50px;
     }
-    #header {
+    .header {
     display: flex;
-    justify-content: center;
     align-items: center;
+    background-color: #0D0D0D; /* Darker grey header */
+    color: #E0E0E0; /* Lighter text in header */
+    padding: 20px;
+    width: 100%; /* Full width */
+    font-size: 1.2em; /* Slightly larger font */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
+    }
+
+    .logo {
+    margin-right: 10px;  /* Creates some space between the logo and the title */
     }
 
     #logo {
     height: 50px;  /* Adjust as needed */
     width: 50px;   /* Adjust as needed */
-    margin-right: 10px;  /* Creates some space between the logo and the title */
-    }
-    .header {
-        background-color: #0D0D0D; /* Darker grey header */
-        color: #E0E0E0; /* Lighter text in header */
-        text-align: center;
-        padding: 20px;
-        width: 100%; /* Full width */
-        font-size: 1.2em; /* Slightly larger font */
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
     }
 
     .footer {
