--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <body>
     <div class="navbar">
     <div class="header">
-        <img src="./tributew.png" alt="Logo" id="logo">
+        <img src="./tribute2w.png" alt="Logo" id="logo">
         <h1>The Best Coin in The World</h1>
     </div>
 </div>
