--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     .header {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #0D0D0D; /* Darker grey header */
     color: #E0E0E0; /* Lighter text in header */
     padding: 20px;
@@ -151,7 +152,7 @@
     <div class="navbar">
     <div class="header">
         <img src="./tribute2w.png" alt="Logo" id="logo">
-        <h1>The Best Coin in The World</h1>
+        <h1 style="margin-left: 10px;">The Best Coin in The World</h1>
     </div>
 </div>
 
