--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
     font-size: 1.2em; /* Slightly larger font */
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
     }
+    .header nav {
+    margin-left: auto;
+    }
 
+    .header nav a {
+    color: #E0E0E0; /* Same color as header text */
+    text-decoration: none; /* Removes the underline */
+    margin-left: 20px;
+    }
+
+    .header nav a:hover {
+    color: #ffffff; /* Changes color when hovered */
+    }
     .logo {
     margin-right: 10px;  /* Creates some space between the logo and the title */
     }
@@ -153,6 +165,10 @@
     <div class="header">
         <img src="./tribute2w.png" alt="Logo" id="logo">
         <h1 style="margin-left: 10px;">The Best Coin in The World</h1>
+        <nav>
+        <a href="#story">Story</a>
+        <a href="#claim">Claim Your Token</a>
+    </nav>
     </div>
 </div>
 
