--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     }
 
     .content p {
+        margin-top: 20px; /* Add a top margin */
         font-size: 1.1em; /* Increased font size */
         line-height: 1.6; /* Better readability */
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
