--- a/index.html
+++ b/index.html
@@ -26,27 +26,34 @@
     }
 
     .navbar {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        transition: top 0.3s;
-        background-color: #1A1A1A; /* Dark grey navbar */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s;
+    background-color: #1A1A1A; /* Dark grey navbar */
+    height: 60px; /* Adjust this value to make the navbar slimmer */
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25); /* Adding a subtle shadow */
+    z-index: 100; /* Ensuring the navbar stays on top */
+    }
+
+    .header {
+    display: flex;
+    align-items: center; /* Aligns items vertically in the center */
+    justify-content: space-between; /* Distributes space evenly between logo and nav links */
+    max-width: 1200px; /* Same as content width */
+    margin: 0 auto; /* Center the header */
+    height: 100%; /* Full height */
+    padding: 0 20px; /* Horizontal padding */
+    }
+
+    #logo {
+    height: 40px;  /* Adjust as needed */
+    width: 40px;   /* Adjust as needed */
     }
 
     .navbar.hide {
         top: -50px;
-    }
-    .header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #0D0D0D; /* Darker grey header */
-    color: #E0E0E0; /* Lighter text in header */
-    padding: 20px;
-    width: 100%; /* Full width */
-    font-size: 1.2em; /* Slightly larger font */
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
-    }
+        
     .header nav {
     margin-left: auto;
     }
@@ -61,15 +68,10 @@
     color: #ffffff; /* Changes color when hovered */
     }
     .logo {
-    margin-right: 10px;  /* Creates some space between the logo and the title */
+    margin-right: 50px;  /* Creates some space between the logo and the title */
     }
 
-    #logo {
-    height: 50px;  /* Adjust as needed */
-    width: 50px;   /* Adjust as needed */
-    }
-
-    .footer {
+   .footer {
         background-color: #1A1A1A; /* Dark grey header and footer */
         color: #ffffff; /* White text in header and footer */
         text-align: center;
