--- a/index.html
+++ b/index.html
@@ -138,8 +138,12 @@
     }
 
     .story .image {
-        flex: 0 0 auto;
+        flex: 1 0 auto;
+        max-width: 100%;
         margin-left: 20px;
+        margin-bottom: 20px;
+        border-radius: 10px; /* Adjust as needed */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Adds shadow */
     }
 
     .story .text {
