--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         margin-top: 80px; /* Adjusted top margin */
         background-color: #1A1A1A; /* Dark grey background for content */
         padding: 20px;
-        width: 100%; /* Full width */
+        max-width: 800px; /* Adjusted maximum width */
+        width: 90%; /* Full width */
         margin-left: auto; /* Center the content */
         margin-right: auto; /* Center the content */
     }
