--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* More professional font */
         text-align: justify; /* Justified text */
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
         #claimButton {
