--- a/index.html
+++ b/index.html
@@ -147,7 +147,12 @@
         border-radius: 20px; /* Adjust as needed */
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Adds shadow */
     }
-
+    .story .text {
+    flex: 1 0 auto;
+    max-width: 600px; /* Adjust the value as needed */
+    word-wrap: break-word; /* To ensure long words/URLs don't cause overflow */
+    padding-right: 20px; /* Add some padding if needed */
+}
    
 </style>
 
