--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     }
 
     .story {
+     max-width: 100%;
     display: flex;
     align-items: flex-start; /* Align items to the top */
     justify-content: space-between;
