--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@
     }
 
     .story {
-     max-width: 100%;
-    display: flex;
-    align-items: flex-start; /* Align items to the top */
-    justify-content: space-between;
+    display: block;
     margin: 20px 0; /* Added for better spacing */
+    overflow: hidden; /* Clear floats */
 }
 
-    .story .image {
-    flex: 0 0 300px; /* Adjust the width of the image container */
+.story .image {
+    float: right;
+    width: 300px; /* Adjust the width of the image container */
     max-width: 100%;
     margin-left: 20px;
     margin-bottom: 20px;
@@ -148,12 +147,11 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Adds shadow */
 }
 
-    .story .text {
-    flex: 1 0 auto;
-    max-width: calc(100% - 340px); /* Adjust the value based on the image width and margin */
-    word-wrap: break-word; /* To ensure long words/URLs don't cause overflow */
+.story .text {
+    overflow: hidden; /* Clear floats */
     padding-right: 20px; /* Add some padding if needed */
 }
+
 
    
 </style>
