--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             width: 90%; /* Full width */
             margin-left: auto; /* Center the content */
             margin-right: auto; /* Center the content */
+            display: flex; /* Added flex display */
+            flex-wrap: wrap; /* Allow wrapping of content */
+            justify-content: center; /* Center the items horizontally */
+            align-items: flex-start; /* Align items to the top */
         }
 
         .content p {
@@ -97,8 +101,8 @@
             text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3); /* Subtle text shadow */
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* More professional font */
             text-align: justify; /* Justified text */
-            margin-left: 20px;
-            margin-right: 20px;
+            margin: 10px; /* Added margin for spacing */
+            flex: 1 1 100%; /* Adjusted flex properties */
         }
 
         #claimButton {
