--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             background-color: #1a1a1a;
             padding: 180px 20px 10px 20px;
             /* Left and right padding are both now 20px */
-            width: 80%;
+            width: 90%;
             margin-left: auto;
             margin-right: auto;
             display: flex;
@@ -416,9 +416,35 @@
                     <img style="width: 50px; height: 50px;" src="./tribute2w.png" alt="Claim Token" />
                 </button>
             </div>
+            <div class="section" id="faq">
+                <h2 class="section-heading">Frequently Asked Questions</h2>
+                <!-- Add your FAQ content here -->
+            </div>
+            <div class="section" id="tokenomics">
+                <h2 class="section-heading">Tokenomics</h2>
+                <!-- Add your Tokenomics content here -->
+            </div>
+            <div class="section" id="roadmap">
+                <h2 class="section-heading">Roadmap</h2>
+                <!-- Add your Roadmap content here -->
+            </div>
+            <div class="section" id="contact">
+                <h2 class="section-heading">Contact</h2>
+                <!-- Add your Contact content here -->
+            </div>
 
             <div class="footer">
-                <p>&copy; 2023 Blockchain Token Project</p>
+                <div class="disclaimer"
+                    style="text-align: right; font-size: 10px; line-height: 1;  font-family: 'Roboto', Arial, sans-serif">
+                    <p>DISCLAIMER: The Tribute token is a fictional concept created for demonstration and educational
+                        purposes only. It does
+                        not represent a real cryptocurrency or financial asset. Any references to investing or financial
+                        advice are purely
+                        hypothetical and should not be considered as actual investment recommendations. The Tribute
+                        token has no real-world
+                        value and cannot be purchased or traded. Please treat it as a fictional token used for
+                        storytelling purposes only.</p>
+                </div>
             </div>
 
             <!-- ... Rest of your HTML ... -->
