--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@
             <h2 style="text-align: center;">Claim your token showing your ETH</h2>
             <div style="display: flex; justify-content: center;">
                 <button id="claimButton" class="claim-button">
-                    <img style="width: 50px; height: 50px;" src="./tribute2w.png" alt="Claim Token" />
+                    <img style="width: 100px; height: 100px;margin-bottom: 100px;margin-top: 20px;"
+                        src="./tribute2w.png" alt="Claim Token" />
                 </button>
             </div>
             <div class="section" id="faq">
@@ -421,84 +422,116 @@
                 <!-- Add your FAQ content here -->
             </div>
             <div class="section" id="tokenomics">
-                <h2 class="section-heading">Tokenomics</h2>
-                <!-- Add your Tokenomics content here -->
-            </div>
-            <div class="section" id="roadmap">
-                <h2 class="section-heading">Roadmap</h2>
-                <!-- Add your Roadmap content here -->
-            </div>
-            <div class="section" id="contact">
-                <h2 class="section-heading">Contact</h2>
-                <!-- Add your Contact content here -->
-            </div>
+                <div class="chart-container" style="width: 500px; height: 500px;">
+                    <canvas id="myChart"></canvas>
 
-            <div class="footer">
-                <div class="disclaimer"
-                    style="text-align: right; font-size: 10px; line-height: 1;  font-family: 'Roboto', Arial, sans-serif">
-                    <p>DISCLAIMER: The Tribute token is a fictional concept created for demonstration and educational
-                        purposes only. It does
-                        not represent a real cryptocurrency or financial asset. Any references to investing or financial
-                        advice are purely
-                        hypothetical and should not be considered as actual investment recommendations. The Tribute
-                        token has no real-world
-                        value and cannot be purchased or traded. Please treat it as a fictional token used for
-                        storytelling purposes only.</p>
+                    <p>This is some explaining text right to the pie chart.</p>
                 </div>
             </div>
 
-            <!-- ... Rest of your HTML ... -->
-            <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
             <script>
-                window.addEventListener("load", function () {
-                    if (window.ethereum) {
-                        window.web3 = new Web3(ethereum);
-                        try {
-                            ethereum.enable();
-                        } catch (error) {
-                            console.log("User denied account access.");
+                var data = [7, 21, 14];
+                var labels = ["Developer", "Airdrop", "Liquidity Creation"];
+
+                var ctx = document.getElementById("myChart").getContext("2d");
+                var myChart = new Chart(ctx, {
+                    type: "pie",
+                    data: {
+                        datasets: [{
+                            data: data,
+                            backgroundColor: ["#ff0000", "#00ff00", "#0000ff"]
+                        }],
+                        labels: labels
+                    },
+                    options: {
+                        title: {
+                            display: true,
+                            text: "Tribute Token Distribution"
+                        },
+                        tooltips: {
+                            enabled: true
                         }
-                    } else if (window.web3) {
-                        window.web3 = new Web3(web3.currentProvider);
-                    } else {
-                        console.log("Non-Ethereum browser detected. Consider installing MetaMask!");
                     }
-
-                    var contractAddress = "CONTRACT_ADDRESS";
-                    var ABI = ABI_DEFINITION;
-                    var contract = new web3.eth.Contract(ABI, contractAddress);
-
-                    document.getElementById("claimButton").addEventListener("click", function () {
-                        web3.eth.getAccounts().then(function (accounts) {
-                            contract.methods
-                                .claimToken()
-                                .send({ from: accounts[0] })
-                                .on("transactionHash", function (hash) {
-                                    createCoinRain();
-                                })
-                                .on("error", console.error);
-                        });
-                    });
-
-                    function createCoinRain() {
-                        // Create 100 coins
-                        for (let i = 0; i < 100; i++) {
-                            const coin = document.createElement("div");
-                            coin.className = "coin";
-                            document.body.appendChild(coin);
-                        }
-
-                        // Remove coins after the animation ends
-                        setTimeout(function () {
-                            const coins = document.querySelectorAll(".coin");
-                            coins.forEach(function (coin) {
-                                coin.remove();
-                            });
-                        }, 3000); // Adjust based on your animation duration
-                    }
-
                 });
             </script>
+
+        </div>
+        <div class="section" id="roadmap">
+            <h2 class="section-heading">Roadmap</h2>
+            <!-- Add your Roadmap content here -->
+        </div>
+        <div class="section" id="contact">
+            <h2 class="section-heading">Contact</h2>
+            <!-- Add your Contact content here -->
+        </div>
+
+        <div class="footer">
+            <div class="disclaimer"
+                style="max-width: %90; text-align: right; font-size: 10px; line-height: 1;  font-family: 'Roboto', Arial, sans-serif">
+                <p>DISCLAIMER: The Tribute token is a fictional concept created for demonstration and educational
+                    purposes only. It does
+                    not represent a real cryptocurrency or financial asset. Any references to investing or financial
+                    advice are purely
+                    hypothetical and should not be considered as actual investment recommendations. The Tribute
+                    token has no real-world
+                    value and cannot be purchased or traded. Please treat it as a fictional token used for
+                    storytelling purposes only.</p>
+            </div>
+        </div>
+
+        <!-- ... Rest of your HTML ... -->
+        <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
+        <script>
+            window.addEventListener("load", function () {
+                if (window.ethereum) {
+                    window.web3 = new Web3(ethereum);
+                    try {
+                        ethereum.enable();
+                    } catch (error) {
+                        console.log("User denied account access.");
+                    }
+                } else if (window.web3) {
+                    window.web3 = new Web3(web3.currentProvider);
+                } else {
+                    console.log("Non-Ethereum browser detected. Consider installing MetaMask!");
+                }
+
+                var contractAddress = "CONTRACT_ADDRESS";
+                var ABI = ABI_DEFINITION;
+                var contract = new web3.eth.Contract(ABI, contractAddress);
+
+                document.getElementById("claimButton").addEventListener("click", function () {
+                    web3.eth.getAccounts().then(function (accounts) {
+                        contract.methods
+                            .claimToken()
+                            .send({ from: accounts[0] })
+                            .on("transactionHash", function (hash) {
+                                createCoinRain();
+                            })
+                            .on("error", console.error);
+                    });
+                });
+
+                function createCoinRain() {
+                    // Create 100 coins
+                    for (let i = 0; i < 100; i++) {
+                        const coin = document.createElement("div");
+                        coin.className = "coin";
+                        document.body.appendChild(coin);
+                    }
+
+                    // Remove coins after the animation ends
+                    setTimeout(function () {
+                        const coins = document.querySelectorAll(".coin");
+                        coins.forEach(function (coin) {
+                            coin.remove();
+                        });
+                    }, 3000); // Adjust based on your animation duration
+                }
+
+            });
+        </script>
 </body>
 
 </html>
